TestCases/ASTTests/SemanticErrorsTests/CreateTests/read_file_before.dot
digraph AST {
  "130025312291520" [label="Start"];
  "130025312291520" -> "130025312295072";
  "130025312295072" [label="Code"];
  "130025312295072" -> "130025312293296";
  "130025312293296" [label="Function"];
  "130025312293296" -> "130025312292144";
  "130025312293296" -> "130025312295888";
  "130025312292144" [label="main"];
  "130025312295888" [label="Code"];
  "130025312295888" -> "130025312290080";
  "130025312295888" -> "130025310437680";
  "130025312295888" -> "130025310439984";
  "130025312295888" -> "130025310444160";
  "130025312295888" -> "130025310445024";
  "130025312295888" -> "130025310445648";
  "130025312295888" -> "130025310446464";
  "130025312295888" -> "130025310447232";
  "130025312295888" -> "130025310447424";
  "130025312295888" -> "130025310448288";
  "130025312295888" -> "130025310448336";
  "130025312290080" [label="Declaration"];
  "130025312290080" -> "130025312300256";
  "130025312290080" -> "130025310437536";
  "130025312300256" [label="x"];
  "130025310437536" [label="Expr"];
  "130025310437536" -> "130025310437920";
  "130025310437536" -> "130025310437824";
  "130025310437536" -> "130025310438064";
  "130025310437920" [label="5"];
  "130025310437824" [label="*"];
  "130025310438064" [label="Expr"];
  "130025310438064" -> "130025310438208";
  "130025310438064" -> "130025310438400";
  "130025310438064" -> "130025310438832";
  "130025310438208" [label="Expr"];
  "130025310438208" -> "130025310438640";
  "130025310438208" -> "130025310438544";
  "130025310438208" -> "130025310438928";
  "130025310438640" [label="3"];
  "130025310438544" [label="/"];
  "130025310438928" [label="10"];
  "130025310438400" [label="+"];
  "130025310438832" [label="Expr"];
  "130025310438832" -> "130025310439312";
  "130025310438832" -> "130025310439216";
  "130025310438832" -> "130025310439600";
  "130025310439312" [label="9"];
  "130025310439216" [label="/"];
  "130025310439600" [label="10"];
  "130025310437680" [label="Declaration"];
  "130025310437680" -> "130025310439744";
  "130025310437680" -> "130025310439840";
  "130025310439744" [label="y"];
  "130025310439840" [label="Expr"];
  "130025310439840" -> "130025310439936";
  "130025310439840" -> "130025310440128";
  "130025310439840" -> "130025310440944";
  "130025310439936" [label="Expr"];
  "130025310439936" -> "130025310440080";
  "130025310439936" -> "130025310440272";
  "130025310439936" -> "130025310440896";
  "130025310440080" [label="Expr"];
  "130025310440080" -> "130025310440512";
  "130025310440080" -> "130025310440416";
  "130025310440080" -> "130025310440800";
  "130025310440512" [label="x"];
  "130025310440416" [label="*"];
  "130025310440800" [label="2"];
  "130025310440272" [label="/"];
  "130025310440896" [label="Expr"];
  "130025310440896" -> "130025310441040";
  "130025310440896" -> "130025310441232";
  "130025310440896" -> "130025310442768";
  "130025310441040" [label="Expr"];
  "130025310441040" -> "130025310441472";
  "130025310441040" -> "130025310441376";
  "130025310441040" -> "130025310441520";
  "130025310441472" [label="2"];
  "130025310441376" [label="+"];
  "130025310441520" [label="Expr"];
  "130025310441520" -> "130025310441616";
  "130025310441520" -> "130025310441808";
  "130025310441520" -> "130025310442576";
  "130025310441616" [label="Expr"];
  "130025310441616" -> "130025310442048";
  "130025310441616" -> "130025310441952";
  "130025310441616" -> "130025310442336";
  "130025310442048" [label="1"];
  "130025310441952" [label="*"];
  "130025310442336" [label="2"];
  "130025310441808" [label="/"];
  "130025310442576" [label="3"];
  "130025310441232" [label="+"];
  "130025310442768" [label="x"];
  "130025310440128" [label="+"];
  "130025310440944" [label="Expr"];
  "130025310440944" -> "130025310443056";
  "130025310440944" -> "130025310442960";
  "130025310440944" -> "130025310443200";
  "130025310443056" [label="8"];
  "130025310442960" [label="*"];
  "130025310443200" [label="Expr"];
  "130025310443200" -> "130025310443632";
  "130025310443200" -> "130025310443536";
  "130025310443200" -> "130025310443920";
  "130025310443632" [label="8"];
  "130025310443536" [label="/"];
  "130025310443920" [label="4"];
  "130025310439984" [label="Assignment"];
  "130025310439984" -> "130025310443392";
  "130025310439984" -> "130025310444016";
  "130025310443392" [label="y"];
  "130025310444016" [label="Expr"];
  "130025310444016" -> "130025310444400";
  "130025310444016" -> "130025310444304";
  "130025310444016" -> "130025310444688";
  "130025310444400" [label="x"];
  "130025310444304" [label="+"];
  "130025310444688" [label="y"];
  "130025310444160" [label="Declaration"];
  "130025310444160" -> "130025310444976";
  "130025310444976" [label="z"];
  "130025310445024" [label="Declaration"];
  "130025310445024" -> "130025310445360";
  "130025310445024" -> "130025310445504";
  "130025310445360" [label="flt_ptr"];
  "130025310445504" [label="Expr"];
  "130025310445504" -> "130025310445600";
  "130025310445504" -> "130025310445936";
  "130025310445600" [label="&"];
  "130025310445936" [label="y"];
  "130025310445648" [label="Declaration"];
  "130025310445648" -> "130025310446224";
  "130025310445648" -> "130025310446560";
  "130025310446224" [label="ch"];
  "130025310446560" [label="'x'"];
  "130025310446464" [label="Declaration"];
  "130025310446464" -> "130025310446896";
  "130025310446464" -> "130025310447088";
  "130025310446896" [label="ptr_to_int"];
  "130025310447088" [label="Expr"];
  "130025310447088" -> "130025310447184";
  "130025310447088" -> "130025310447520";
  "130025310447184" [label="&"];
  "130025310447520" [label="z"];
  "130025310447232" [label="Assignment"];
  "130025310447232" -> "130025310447616";
  "130025310447232" -> "130025310447760";
  "130025310447616" [label="ptr_to_int"];
  "130025310447760" [label="Expr"];
  "130025310447760" -> "130025310447856";
  "130025310447760" -> "130025310448192";
  "130025310447856" [label="&"];
  "130025310448192" [label="x"];
  "130025310447424" [label="Comment"];
  "130025310447424" -> "130025310449440";
  "130025310449440" [label=" this is allowed. The pointer now points to variable x"];
  "130025310448288" [label="Assignment"];
  "130025310448288" -> "130025310449536";
  "130025310448288" -> "130025310448864";
  "130025310449536" [label="Expr"];
  "130025310449536" -> "130025310449632";
  "130025310449536" -> "130025310448528";
  "130025310449632" [label="*"];
  "130025310448528" [label="ptr_to_int"];
  "130025310448864" [label="33"];
  "130025310448336" [label="Comment"];
  "130025310448336" -> "130025310449488";
  "130025310449488" [label=" this is NOT allowed!"];
}
